--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <h1><b>Applications of Rank Correlation</b></h1>
     <div class=app>
     <p><b>Medical Research:</b><br>
-       <img src="C:\Users\babai\AppData\Local\Temp\Tempf62a42c9-67a6-4c3f-b2ab-e6091f8f899d_mathprojectphotos.zip\New folder\medical research.webp" alt="could not load"></img>
+       <img src="medical research.webp" alt="could not load"></img>
        <br>In clinical trials, researchers may use Spearman's rank correlation to assess the relationship between two variables, such as a patient's age and their response to a particular treatment. This is useful when the data is not normally distributed, or when the variables are measured on an ordinal scale.</p>
     <p> <b> Education Assessment:</b><br>
       <img src="C:\Users\babai\AppData\Local\Temp\Temp5e6d5a51-f630-4ae5-872a-daf5d4704ecc_mathprojectphotos.zip\New folder\education.png" alt="could not load"></img>
